--- a/app/src/main/res/layout/content_donate.xml
+++ b/app/src/main/res/layout/content_donate.xml
@@ -31,4 +31,13 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="27dp"
         android:layout_alignEnd="@+id/donateTitle" />
+
+    <Button
+        android:id="@+id/donateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="47dp"
+        android:text="@string/donateButton" />
 </RelativeLayout>
