--- a/app/src/main/res/layout/content_donate.xml
+++ b/app/src/main/res/layout/content_donate.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_donate" tools:context=".Donate">
+    tools:showIn="@layout/activity_donate" tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,5 +39,45 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="47dp"
+        android:onClick="donateButtonPressed"
         android:text="@string/donateButton" />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/donateSubtitle"
+        android:layout_alignParentStart="true"
+        android:id="@+id/paymentMethod"
+        android:layout_toStartOf="@+id/amountPicker"
+        android:layout_above="@+id/progressBar">
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/paypal"
+            android:id="@+id/PayPal"
+            android:checked="false" />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/direct"
+            android:id="@+id/Direct"
+            android:checked="false" />
+    </RadioGroup>
+
+    <NumberPicker
+        android:id="@+id/amountPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/paymentMethod"
+        android:layout_alignEnd="@+id/donateSubtitle" />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:id="@+id/progressBar"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/donateSubtitle"
+        android:layout_above="@+id/donateButton"
+        android:indeterminate="false" />
 </RelativeLayout>
