--- a/app/src/main/res/menu/menu_donate.xml
+++ b/app/src/main/res/menu/menu_donate.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="100"
         android:title="@string/menuReport"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menuDonate"
+        android:orderInCategory="100"
+        android:title="@string/menuDonate"
+        app:showAsAction="never" />
 </menu>
