--- a/app/src/main/res/layout/content_donate.xml
+++ b/app/src/main/res/layout/content_donate.xml
@@ -38,19 +38,18 @@
         android:layout_height="wrap_content"
         android:id="@+id/donateButton"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="53dp"
         android:onClick="donateButtonPressed"
         android:text="@string/donateButton" />
 
     <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/donateSubtitle"
         android:layout_alignParentStart="true"
         android:id="@+id/paymentMethod"
-        android:layout_toStartOf="@+id/amountPicker"
-        android:layout_above="@+id/progressBar">
+        android:layout_toStartOf="@+id/amountPicker">
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -79,6 +78,45 @@
         android:id="@+id/progressBar"
         android:layout_alignParentStart="true"
         android:layout_alignEnd="@+id/donateSubtitle"
+        android:layout_above="@+id/amount"
+        android:indeterminate="false"
+        android:layout_marginBottom="27dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/amount"
+        android:id="@+id/amount"
         android:layout_above="@+id/donateButton"
-        android:indeterminate="false" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="26dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/paymentAmount"
+        android:layout_alignTop="@+id/amount"
+        android:layout_alignEnd="@+id/progressBar"
+        android:layout_toEndOf="@+id/donateButton" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/total"
+        android:id="@+id/textView"
+        android:layout_alignBottom="@+id/donateButton"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/totalSoFar"
+        android:id="@+id/totalSoFar"
+        android:layout_alignTop="@+id/textView"
+        android:layout_alignEnd="@+id/paymentMethod" />
 </RelativeLayout>
