--- a/app/src/main/res/menu/menu_donate.xml
+++ b/app/src/main/res/menu/menu_donate.xml
@@ -6,15 +6,18 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:onClick="settings" />
     <item
         android:id="@+id/menuReport"
         android:orderInCategory="100"
         android:title="@string/menuReport"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:onClick="report" />
     <item
         android:id="@+id/menuDonate"
         android:orderInCategory="100"
         android:title="@string/menuDonate"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:onClick="donate" />
 </menu>
