Week 09. Database/Application Support

--- a/app/src/main/res/menu/menu_donate.xml
+++ b/app/src/main/res/menu/menu_donate.xml
@@ -3,12 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ie.app.activities.Donate">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"
-        android:onClick="settings" />
-    <item
         android:id="@+id/menuReport"
         android:orderInCategory="100"
         android:title="@string/menuReport"
@@ -20,4 +14,10 @@
         android:title="@string/menuDonate"
         app:showAsAction="never"
         android:onClick="donate" />
+    <item
+        android:id="@+id/menuReset"
+        android:orderInCategory="100"
+        android:title="@string/menuReset"
+        app:showAsAction="never"
+        android:onClick="reset" />
 </menu>
