Week 13. REST/Cloud (cont.)

--- a/app/src/main/res/layout/row_donate.xml
+++ b/app/src/main/res/layout/row_donate.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="match_parent">
     <TextView
-        android:id="@+id/row_amount"
-        android:layout_width="wrap_content"
+        android:id="@+id/row_upvotes"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="48dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:text="@string/defaultAmount" />
+        android:text="@string/defaultAmount"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/row_amount"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:text="@string/defaultAmount"
+        android:layout_weight="1"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/row_method"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="106dp"
+        android:layout_marginTop="20dp"
         android:text="@string/defaultMethod"
-        android:layout_alignTop="@+id/row_amount"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        android:layout_weight="1"
+        android:textSize="18sp" />
+
+    <ImageView
+        android:id="@+id/imgDelete"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:src="@android:drawable/ic_delete" />
+</LinearLayout>
